test/fuzz: add test for box.execute()
The test adds a test for the Lua function that executes SQL
queries. The test is disabled due to bug [1].

Closes #11883

1. https://github.com/tarantool/tarantool/issues/11897

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -102,6 +102,7 @@ include(BuildLuaTests)
 
 # test_engine.lua supports luzer, but test_mvcc.lua is not.
 string(JOIN ";" LUZER_TESTS
+  box_execute_test.lua
   console_eval_test.lua
   csv_load_test.lua
   decimal_new_test.lua
@@ -139,6 +140,8 @@ foreach(test_name ${LUZER_TESTS})
   )
 endforeach()
 set_tests_properties(
+  # To be enabled in scope tarantool/tarantool#11897.
+  test/fuzz/lua/box_execute_test.lua
   # To be enabled in scope tarantool/tarantool#11898.
   test/fuzz/lua/json_decode_test.lua
   # To be enabled in scope tarantool/security#151.
