test/fuzz: enable building
The patch enables additional fuzzing tests in build.

The patch add a compiler flag `-stdlib=libstdc++` required for
successful libicu compilation. Otherwise linkage of `tarantool`
binary is failed with errors below:

NO_WRAP
box/libnode_name.a -lpthread -lrt -lm -ldl -lresolv -lgcc -lgcc_s -lc -lgcc -lgcc_s
/usr/bin/ld: ../build/icu-prefix/lib/libicuuc.a(umutex.ao): in function `icu::UMutex::getMutex()':
umutex.cpp:(.text._ZN3icu6UMutex8getMutexEv+0x1f): undefined reference to `std::__once_callable'
/usr/bin/ld: umutex.cpp:(.text._ZN3icu6UMutex8getMutexEv+0x2d): undefined reference to `std::__once_call'
/usr/bin/ld: umutex.cpp:(.text._ZN3icu6UMutex8getMutexEv+0x57): undefined reference to `__once_proxy'
/usr/bin/ld: umutex.cpp:(.text._ZN3icu6UMutex8getMutexEv+0xf3): undefined reference to `std::__throw_system_error(int)'
/usr/bin/ld: ../build/icu-prefix/lib/libicuuc.a(umutex.ao): in function `icu::umtx_init()':
umutex.cpp:(.text._ZN3icuL9umtx_initEv+0x36): undefined reference to `std::condition_variable::condition_variable()'
/usr/bin/ld: ../build/icu-prefix/lib/libicuuc.a(umutex.ao): in function `umtx_lock':
umutex.cpp:(.text.umtx_lock+0x47): undefined reference to `std::__throw_system_error(int)'
NO_WRAP

NO_CHANGELOG=testing
NO_DOC=testing
NO_TEST=testing

--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -160,6 +160,7 @@ if (NOT ENABLE_UB_SANITIZER)
 endif ()
 
 include(ProtobufMutator)
+include(BuildLuaTests)
 
 # UndefinedBehaviorSanitizer is not supported in LuaJIT.
 # See https://github.com/tarantool/tarantool/issues/8473
@@ -169,5 +170,5 @@ if (NOT ENABLE_UB_SANITIZER)
 endif()
 
 add_custom_target(fuzzers
-                  DEPENDS ${FUZZ_TEST_TARGETS}
+                  DEPENDS ${FUZZ_TEST_TARGETS} lua-tests
                   COMMENT "Build fuzzers")
