--- a/test/app-luatest/CMakeLists.txt
+++ b/test/app-luatest/CMakeLists.txt
@@ -23,6 +23,7 @@ list(APPEND TEST_ENV
   "BUILDDIR=${PROJECT_BINARY_DIR}"
   "PYTHON_EXECUTABLE=${PYTHON}"
   "VARDIR=${VARDIR}"
+  ${TARANTOOL_ASAN_OPTIONS}
 )
 
 file(GLOB tests ${CMAKE_CURRENT_SOURCE_DIR} *_test.lua)
