--- a/test/config-luatest/CMakeLists.txt
+++ b/test/config-luatest/CMakeLists.txt
@@ -12,6 +12,7 @@ list(APPEND TEST_ENV
   "LUA_PATH=${LUATEST_LUA_PATH}"
   "SOURCEDIR=${PROJECT_SOURCE_DIR}"
   "VARDIR=${VARDIR}"
+  "${TARANTOOL_ASAN_OPTIONS}"
 )
 
 file(GLOB tests ${CMAKE_CURRENT_SOURCE_DIR} *_test.lua)
