--- a/test/engine-luatest/CMakeLists.txt
+++ b/test/engine-luatest/CMakeLists.txt
@@ -24,6 +24,7 @@ list(APPEND TEST_ENV
   "LUA_CPATH=${LUA_CPATH}"
   "BUILDDIR=${CMAKE_CURRENT_BINARY_DIR}"
   "VARDIR=${VARDIR}"
+  "${TARANTOOL_ASAN_OPTIONS}"
 )
 
 file(GLOB tests ${CMAKE_CURRENT_SOURCE_DIR} *_test.lua)
