--- a/test/box-luatest/CMakeLists.txt
+++ b/test/box-luatest/CMakeLists.txt
@@ -27,6 +27,7 @@ list(APPEND TEST_ENV
   "SOURCEDIR=${PROJECT_SOURCE_DIR}"
   "BUILDDIR=${PROJECT_BINARY_DIR}"
   "VARDIR=${VARDIR}"
+  "${TARANTOOL_ASAN_OPTIONS}"
 )
 
 file(GLOB tests ${CMAKE_CURRENT_SOURCE_DIR} *_test.lua)
