--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -47,7 +47,7 @@ set_tests_properties(
   ${test_path}/test_engine.lua${TEST_PARAM_DELIM}memtx
   ${test_path}/test_mvcc.lua
   PROPERTIES
-    ENVIRONMENT "LUA_PATH=${LUATEST_LUA_PATH};${LUA_PATH}"
+    ENVIRONMENT "LUA_PATH=${LUATEST_LUA_PATH};${LUA_PATH};${TARANTOOL_ASAN_OPTIONS}"
     LABELS "${TEST_SUITE_NAME};fuzzing;"
     DEPENDS ${TEST_SUITE_NAME}-deps
 )
