cmake: support ASAN and LSAN by CTest
Running tests with enabled ASAN and LSAN requires defining a
number of environment variables (like a path to a file with
suppressions or custom sanitizers flags). These environment
variables are defined in .test.mk and therefore it is complicated
to use these variables with CTest. The patch moves environment
variables to `cmake/profile.cmake` and sets them in targets with
test-run.py and tests for CTest.

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/sql-luatest/CMakeLists.txt
+++ b/test/sql-luatest/CMakeLists.txt
@@ -50,7 +50,7 @@ foreach(test_path ${tests})
            WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
   )
   set_tests_properties(${test_title} PROPERTIES
-    ENVIRONMENT "${TEST_ENV}"
+    ENVIRONMENT "${TEST_ENV} ${TARANTOOL_ASAN_OPTIONS}"
     LABELS "${TEST_SUITE_NAME};regression;"
     DEPENDS ${TEST_SUITE_NAME}-deps
     FAIL_REGULAR_EXPRESSION "${CTEST_FAIL_REGEXP}"
