cmake: generate .envrc with ASAN/LSAN options
There is a tool named `direnv` [1], it is an extension for shell,
that can load and unload environment variables depending on the
current directory. Running regression tests with enabled ASAN and
LSAN requires setting environment variables. CTest set these
variables in each test, but for running `tarantool` it is reqired
setting these variables manually. `direnv` and autogenerated
`.envrc` solves this problem - CMake automatically generates
a file with actual settings, `direnv` loads this file as soon as
a current directory changed to a PROJECT_SOURCE_DIR.

Note, the command `direnv allow` must be executed for loading
updated `.envrc`.

1. https://direnv.net/

NO_CHANGELOG=testing
NO_DOC=testing
NO_TEST=testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,14 @@ find_program(RM rm)
 include (CTest)
 enable_testing()
 
+# CMake generates a file `.envrc`, supported by `direnv` [1] and
+# that allows loading and unloading environment variables
+# depending on the current directory.
+#
+# 1. https://direnv.net/
+set(ENVRC_FILENAME ${PROJECT_SOURCE_DIR}/.envrc)
+file(REMOVE ${ENVRC_FILENAME})
+
 # Define PACKAGE macro in tarantool/config.h
 set(PACKAGE "Tarantool" CACHE STRING "Package name.")
 
