test/fuzz: add yaml test
The patch adds a test for the yaml Lua module [1]. The test tests
`yaml.decode()` and `yaml.encode()` functions.

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/yaml/

Part of #11883

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -112,6 +112,7 @@ string(JOIN ";" LUZER_TESTS
   pickle_unpack_test.lua
   uri_parse_test.lua
   uuid_frombin_test.lua
+  yaml_decode_test.lua
 )
 
 make_lua_path(FUZZ_LUA_PATH
