test/fuzz: add msgpack tests
The patch adds a couple of tests for the msgpack Lua module [1].
First one tests `msgpack.decode()` and `msgpack.encode()` functions
and the second one also tests `datetime.interval.new()`.

Part of #11883

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/msgpack/

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -102,6 +102,8 @@ include(BuildLuaTests)
 
 # test_engine.lua supports luzer, but test_mvcc.lua is not.
 string(JOIN ";" LUZER_TESTS
+  msgpack_decode_test.lua
+  msgpack_itv_test.lua
   uri_parse_test.lua
 )
 
