test/fuzz: add json tests
The patch adds a test for the json Lua module [1]. The test tests
two functions: `json.decode()` and `json.encode()`. The test is
disabled due to bug [2].

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/json/
2. https://github.com/tarantool/tarantool/issues/11898

Part of #11883

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -105,6 +105,7 @@ string(JOIN ";" LUZER_TESTS
   console_eval_test.lua
   csv_load_test.lua
   decimal_new_test.lua
+  json_decode_test.lua
   misc_memprof_test.lua
   misc_sysprof_test.lua
   msgpack_decode_test.lua
@@ -138,6 +139,8 @@ foreach(test_name ${LUZER_TESTS})
   )
 endforeach()
 set_tests_properties(
+  # To be enabled in scope tarantool/tarantool#11898.
+  test/fuzz/lua/json_decode_test.lua
   # To be enabled in scope tarantool/security#151.
   test/fuzz/lua/uri_parse_test.lua
   # To be enabled in scope tarantool/tarantool#12063.
