test/fuzz: add a pickle test
The patch adds a test for the pickle Lua module [1]. The test tests
two functions: `pickle.pack()` and `pickle.unpack()`.

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/pickle/

Part of #11883

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -104,6 +104,7 @@ include(BuildLuaTests)
 string(JOIN ";" LUZER_TESTS
   msgpack_decode_test.lua
   msgpack_itv_test.lua
+  pickle_unpack_test.lua
   uri_parse_test.lua
 )
 
@@ -131,5 +132,7 @@ endforeach()
 set_tests_properties(
   # To be enabled in scope tarantool/security#151.
   test/fuzz/lua/uri_parse_test.lua
+  # To be enabled in scope tarantool/tarantool#12063.
+  test/fuzz/lua/pickle_unpack_test.lua
   PROPERTIES DISABLED TRUE
 )
