test/fuzz: add uuid test
The patch adds a test for the uuid Lua module [1]. The test tests
two functions: `uuid.frombin()` and `uuid.is_uuid()`.

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/uuid/

Part of #11883

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -106,6 +106,7 @@ string(JOIN ";" LUZER_TESTS
   msgpack_itv_test.lua
   pickle_unpack_test.lua
   uri_parse_test.lua
+  uuid_frombin_test.lua
 )
 
 make_lua_path(FUZZ_LUA_PATH
