test/fuzz: add net.box test
The patch adds a test for the net.box Lua module [1]. The test tests
a function `net_box.connect()` and a method `:call`.

1. https://www.tarantool.io/en/doc/latest/reference/reference_lua/net_box/

Part #11883

NO_CHANGELOG=internal
NO_DOC=internal
NO_TEST=internal

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -108,6 +108,7 @@ string(JOIN ";" LUZER_TESTS
   misc_sysprof_test.lua
   msgpack_decode_test.lua
   msgpack_itv_test.lua
+  net_box_call_test.lua
   pickle_unpack_test.lua
   uri_parse_test.lua
   uuid_frombin_test.lua
