--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -197,6 +197,7 @@ set(box_sources
     engine.c
     memtx_engine.cc
     memtx_space.c
+    memtx_sort_data.c
     sysview.c
     sysalloc.c
     blackhole.c
