trivia: fix potential overflow in DIV_ROUND_UP
DIV_ROUND_UP(n, d) may overflow when `n` or/and `d` are large. Fix it.
In vy_range.c this macro was used with a floating point type, which
does not support the modulo operator, so it was switched to ceil().

NO_DOC=internal
NO_CHANGELOG=internal

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -326,6 +326,10 @@ create_unit_test(PREFIX trigger
                  SOURCES trigger.c core_test_utils.c
                  LIBRARIES unit core
 )
+create_unit_test(PREFIX trivia
+                 SOURCES trivia.c
+                 LIBRARIES unit
+)
 
 if (NOT ENABLE_GCOV)
     # This test is known to be broken with GCOV
