--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,7 +54,7 @@ message(STATUS "Random seed is ${RANDOM_SEED}")
 set(TEST_PARAM_DELIM ":")
 
 list(APPEND LUATEST_COMMAND_WITH_FLAGS
-    ${PROJECT_SOURCE_DIR}/test-run/lib/luatest/bin/luatest
+    ${PROJECT_SOURCE_DIR}/test-run/bin/luatest
     --no-clean
     --verbose
     --no-capture
@@ -67,9 +67,6 @@ tarantool_make_lua_path(LUATEST_LUA_PATH
     # another test suites.
     ${PROJECT_SOURCE_DIR}/?.lua
     ${PROJECT_SOURCE_DIR}/?/init.lua
-    ${PROJECT_SOURCE_DIR}/test-run/lib/checks/?.lua
-    ${PROJECT_SOURCE_DIR}/test-run/lib/luatest/?/init.lua
-    ${PROJECT_SOURCE_DIR}/test-run/lib/luatest/?.lua
 )
 
 add_subdirectory(app)
