--- a/test/box-luatest/CMakeLists.txt
+++ b/test/box-luatest/CMakeLists.txt
@@ -38,22 +38,7 @@ foreach(test_path ${tests})
   if(${test_name} STREQUAL ${TEST_SUITE_NAME})
     continue()
   endif()
-  set(test_title "test/${TEST_SUITE_NAME}/${test_name}")
-  add_test(NAME ${test_title}
-           COMMAND ${TARANTOOL_BIN}
-                   # Disable stdout buffering,
-                   # see https://github.com/tarantool/test-run/issues/119.
-                   -e "io.stdout:setvbuf('no')"
-                   ${LUATEST_COMMAND_WITH_FLAGS}
-                   ${test_title}
-           WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-  )
-  set_tests_properties(${test_title} PROPERTIES
-    ENVIRONMENT "${TEST_ENV}"
-    LABELS "${TEST_SUITE_NAME};regression;"
-    DEPENDS ${TEST_SUITE_NAME}-deps
-    FAIL_REGULAR_EXPRESSION "${CTEST_FAIL_REGEXP}"
-  )
+  add_luatest_test(${TEST_SUITE_NAME} ${test_name} "${TEST_ENV}" FALSE)
 endforeach()
 
 if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
