--- a/test/box-tap/suite.ini
+++ b/test/box-tap/suite.ini
@@ -3,7 +3,7 @@ core = app
 description = Database tests with #! using TAP
 is_parallel = True
 use_unix_sockets_iproto = True
-release_disabled = errinj_set_with_enviroment_vars.test.lua gh-6198-max-cnt-of-tuple-fields-insert-overflow-err-msg.test.lua
+release_disabled = errinj_set_with_enviroment_vars.test.lua
 fragile = {
     "retries": 10,
     "tests": {
