test/fuzz: add sysprof and memprof tests
The patch adds tests for the sysprof [1] and memprof [2] Lua modules.

1. https://www.tarantool.io/en/doc/latest/tooling/luajit_sysprof/
2. https://www.tarantool.io/en/doc/latest/tooling/luajit_memprof/

Part of #11883

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -104,6 +104,8 @@ include(BuildLuaTests)
 string(JOIN ";" LUZER_TESTS
   csv_load_test.lua
   decimal_new_test.lua
+  misc_memprof_test.lua
+  misc_sysprof_test.lua
   msgpack_decode_test.lua
   msgpack_itv_test.lua
   pickle_unpack_test.lua
