test/fuzz: support Lua coverage-guided testing
When using a sanitizer like Address Sanitizer with luzer, it’s
necessary to LD_PRELOAD the sanitizer’s shared object. ASan
requires that it be loaded first, before anything else; it must
either be preloaded, or statically linked into the executable (in
this case, the tarantool). ASan and UBSan define many of the same
code coverage symbols as libFuzzer. In typical libFuzzer usage,
this isn’t an issue, since ASan/UBSan declare those symbols weak;
the libFuzzer ones take precedence. But when libFuzzer is loaded
in a shared object later, that doesn’t work. The symbols from
ASan/UBSan have already been loaded via LD_PRELOAD, and coverage
information therefore goes to those libraries, leaving libFuzzer
very broken.

The only good way to solve this is to link libFuzzer into tarantool
itself, instead of luzer. Since it’s therefore part of the proper
executable rather than a shared object that’s dynamically loaded
later, symbol resolution works correctly and libFuzzer symbols
take precedence.

The patch adds a CMake module for searching and unpacking
libFuzzer and building a file with libFuzzer symbols. The latter
is needed because by default all symbols in Tarantool is closed,
so additionally to linking libFuzzer statically we should export
libFuzzer symbols in Tarantool binary to make it visible outside.
The logic with linking libFuzzer and Tarantool statically is
disabled on OSS FUZZ, because there we cannot assume the fuzzing
engine is libFuzzer by default, OSS FUZZ set a library with
fuzzing engine via environment variable LIB_FUZZING_ENGINE [1].

Closes #11884
See also #12097
See also #13782

1. https://google.github.io/oss-fuzz/getting-started/new-project-guide/#buildsh

NO_CHANGELOG=build
NO_DOC=build
NO_TEST=build

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ extra/dist/tarantool@.service
 extra/dist/tarantool.tmpfiles.conf
 extra/dist/tarantool-generator
 extra/exports.*
+extra/exports_libfuzzer
 cmake_install.cmake
 config.mk
 config.guess
