test: add basic luawasm test suite
NO_DOC=later
NO_CHANGELOG=later

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -100,6 +100,7 @@ add_subdirectory(box-luatest)
 add_subdirectory(config-luatest)
 add_subdirectory(engine-luatest)
 add_subdirectory(engine-tap)
+add_subdirectory(luawasm-luatest)
 add_subdirectory(metrics-luatest)
 add_subdirectory(replication-luatest)
 add_subdirectory(sql-tap)
