--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -17,5 +17,5 @@ add_subdirectory(raft)
 add_subdirectory(fakesys)
 add_subdirectory(tzcode)
 if(ENABLE_BUNDLED_MSGPUCK)
-    add_subdirectory(msgpuck EXCLUDE_FROM_ALL)
+    add_subdirectory(msgpuck)
 endif()
