test/fuzz: support luzer in test_engine
From the beginning the test test_engine.lua was a typical blackbox
fuzzing test. The test generates inputs for a target program
(tarantool in our case) without knowledge of tarantool's internal
behaviour or implementation.

In general, blackbox fuzzing works well when the target is large,
the target is not deterministic for the same input and the target
is slow. The tarantool storage engines are a large,
non-deterministic and slow targets, but using alternative
approaches, like greybox fuzzing, can make more effective by using
information about the tarantool's internal state, typically code
coverage.

The patch introduces support for greybox fuzzing to the
test_engine.lua by supporting a luzer, a coverage-guided, native
Lua fuzzing engine [1]. luzer is not a standalone fuzzing engine,
under the hood it use a well-known and popular fuzzing engine
libFuzzer. The main value of the luzer is that it allows one to
test programs with the Lua interface using a regular fuzzing
engine. The patch left possibility to execute test_engine as
a blackbox test, but it uses greybox fuzzing when luzer Lua module
is available. However, one can set environment variable
`DISABLE_LUZER` and use test in blackbox mode even luzer is
available.

The range for `wal_max_size` is adjusted because `wal_max_size`
must be greater than 1.

1. https://github.com/ligurio/luzer

Follows up #11884
Closes #11906

NO_CHANGELOG=testing
NO_DOC=testing

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -56,7 +56,7 @@ function(create_luzer_test)
   cmake_parse_arguments(
     FUZZ
     ""
-    "FILENAME"
+    "FILENAME;TEST_TITLE"
     "TEST_ENV;LABELS"
     ""
     ${ARGN}
@@ -73,8 +73,12 @@ function(create_luzer_test)
     set(libfuzzer_opts_effective "${libfuzzer_opts_effective} ${corpus_path}")
   endif()
 
+  set(test_title ${FUZZ_FILENAME})
+  if (NOT ${FUZZ_TEST_TITLE})
+    set(test_title ${FUZZ_TEST_TITLE})
+  endif()
   string(REGEX REPLACE "^${PROJECT_SOURCE_DIR}/" "" test_title
-    "${FUZZ_FILENAME}")
+    "${test_title}")
   add_test(NAME ${test_title}
     # LUAJIT_TEST_BINARY is used below because we want to be sure
     # that LuaJIT-based fuzzing tests are still working for the
@@ -151,4 +155,21 @@ set_tests_properties(
   # To be enabled in scope tarantool/security#153.
   test/fuzz/lua/console_eval_test.lua
   PROPERTIES DISABLED TRUE
+)
+
+set(test_title
+  "test/fuzz/lua/test_engine.lua${TEST_PARAM_DELIM}memtx${TEST_PARAM_DELIM}luzer")
+create_luzer_test(
+  FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/test_engine.lua
+  TEST_TITLE ${test_title}
+  TEST_ENV "${TEST_ENV};TEST_ENGINE=memtx"
+  LABELS "fuzzing;${TEST_SUITE_NAME}"
+)
+set(test_title
+  "test/fuzz/lua/test_engine.lua${TEST_PARAM_DELIM}vinyl${TEST_PARAM_DELIM}luzer")
+create_luzer_test(
+  FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/test_engine.lua
+  TEST_TITLE ${test_title}
+  TEST_ENV "${TEST_ENV};TEST_ENGINE=vinyl"
+  LABELS "fuzzing;${TEST_SUITE_NAME}"
 )
