cmake: ignore fuzz directory in test generation
Exclude `fuzz` directory in a loop for CMake tests generation.
Otherwise, fuzzing tests are executed by test-run.py.

NO_CHANGELOG=build
NO_DOC=build
NO_TEST=build

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -215,6 +215,9 @@ foreach(test_path ${tests})
   if(${_index} GREATER -1)
     continue()
   endif()
+  if(${basedir} MATCHES "fuzz")
+    continue()
+  endif()
   set(test_title "test/${suite}/${test_name}")
   # Salt is needed to avoid intersection in vardir paths for
   # different tests. Salt length equal to 1 is enough and remember
