ci: disable flaky workflow if no tests changed
Disable the flaky test catching workflow completely if there are no
changed files with names satisfying the test pattern in the PR commits.

Follow-up #6646

NO_DOC=ci
NO_TEST=ci
NO_CHANGELOG=ci

--- a/.github/workflows/debug_catch_flaky.yml
+++ b/.github/workflows/debug_catch_flaky.yml
@@ -1,7 +1,10 @@
 name: debug_catch_flaky
 
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'test/*/*.lua'
+      - 'test/unit/*.c*'
 
 concurrency:
   # Update of a developer branch cancels the previously scheduled workflow
