cmake: update default libFuzzer options
CTest-based tests use default libFuzzer options. The patch adds
some useful options to these options.

NO_CHANGELOG=build
NO_DOC=build

--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -57,6 +57,9 @@ string(JOIN " " LIBFUZZER_OPTS
   -reload=1
   -report_slow_units=5
   -seed=${RANDOM_SEED}
+  -use_cmp=1
+  -use_counters=1
+  -use_memmem=1
   -use_value_profile=1
   -workers=${CMAKE_BUILD_PARALLEL_LEVEL}
   # Shell parameter expansion,
