--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -268,6 +268,7 @@ set(box_sources
     decimal.c
     read_view.c
     mp_box_ctx.c
+    xlog_reader.c
     ${sql_sources}
     ${lua_sources}
     lua/init.c
