--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,6 +87,7 @@ lua_source(lua_sources ../third_party/checks/checks.lua checks_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/api.lua metrics_api_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/cartridge/failover.lua metrics_cartridge_failover_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/cartridge/issues.lua metrics_cartridge_issues_lua)
+lua_source(lua_sources ../third_party/metrics/metrics/cartridge/config.lua metrics_cartridge_config_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/cfg.lua metrics_cfg_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/collectors/counter.lua metrics_collectors_counter_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/collectors/gauge.lua metrics_collectors_gauge_lua)
@@ -117,6 +118,7 @@ lua_source(lua_sources ../third_party/metrics/metrics/tarantool/network.lua metr
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/operations.lua metrics_tarantool_operations_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/replicas.lua metrics_tarantool_replicas_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/runtime.lua metrics_tarantool_runtime_lua)
+lua_source(lua_sources ../third_party/metrics/metrics/tarantool/schema.lua metrics_tarantool_schema_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/slab.lua metrics_tarantool_slab_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/spaces.lua metrics_tarantool_spaces_lua)
 lua_source(lua_sources ../third_party/metrics/metrics/tarantool/system.lua metrics_tarantool_system_lua)
