lib: refactor bloom API
Currently, bloom filter doesn't allow to restore it from saved table
without copy and create it with manually allocated table. This logic
is required for MemCS skip index, so the commit completely rewrites its
API. The key idea of the new API is separating bloom definition from bloom
data. Now all the methods accept these arguments separately so that one
definition can be used to work with many bloom filters.

Also, we need a method merging two bloom filters into one, so this
commit adds it as well.

Along the way, turn bloom unit test into tap test.

Part of tarantool/tarantool-ee#1431

NO_CHANGELOG=internal
NO_DOC=internal

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -276,7 +276,7 @@ create_unit_test(PREFIX light_view
 )
 create_unit_test(PREFIX bloom
                  SOURCES bloom.cc
-                 LIBRARIES salad
+                 LIBRARIES salad unit
 )
 create_unit_test(PREFIX vclock
                  SOURCES vclock.cc core_test_utils.c
