lua: introduce ULID support
This patch adds full ULID implementation compatible with the official
specification (Crockford Base32, 48-bit timestamp, 80-bit entropy).

Features:
 - ULID generator in C (tt_ulid_create);
 - encoding and decoding: tt_ulid_to_string, tt_ulid_from_string;
 - Lua module "ulid";
 - binary and string conversion;
 - comparison and equality semantics;
 - luatest coverage.

@TarantoolBot document
Title: introduce the `ulid` module

The `ulid` module provides support for ULIDs (Universally Unique
Lexicographically Sortable Identifiers) in Tarantool. A ULID is a
128-bit value composed of a 48-bit millisecond timestamp and an
80-bit randomness part, encoded as a 26-character Crockford Base32
string. In binary form ULIDs are represented as 16-byte values in
big-endian byte order, in accordance with the ULID specification.

The builtin generator guarantees that multiple ULIDs produced within
the same millisecond are *strictly increasing*, providing stable
lexicographic ordering.

API overview:

 - ulid() / ulid.new()       — create a new ULID object
 - ulid.str()                — generate and return a ULID string
 - ulid.bin()                — generate and return a binary ULID (16 bytes)
 - ulid.fromstr(str)         — parse ULID from a 26-char string
 - ulid.frombin(bin)         — parse ULID from 16-byte binary data
 - ulid.is_ulid(x)           — check if x is a ULID object
 - ulid.NULL                 — the all-zero ULID
 - methods on ULID objects:
       :str()   — encode as string
       :bin()   — encode as binary
       :isnil() — check if ULID is all-zero

Examples:

  tarantool> ulid = require('ulid')
  ---
  ...
  -- creating ULIDs in different formats
  tarantool> u_obj = ulid.new()
  tarantool> u_str = ulid.str()
  tarantool> u_bin = ulid.bin()

  tarantool> u_obj, u_str, u_bin
  ---
  - 06DDHQAGEX77Z196F5Z4B43G0W
  - 06DDHQAGEX77Z196F5Z4B43G10
  - "\x01\x9A\xD8\xDDPwN\x7F\x85&y~E\x90p\t"
  ...

String and binary conversions:

  tarantool>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,7 @@ lua_source(lua_sources lua/dojitcmd.lua dojitcmd_lua)
 lua_source(lua_sources lua/string.lua string_lua)
 lua_source(lua_sources lua/fiber.lua fiber_lua)
 lua_source(lua_sources lua/buffer.lua buffer_lua)
+lua_source(lua_sources lua/ulid.lua ulid_lua)
 lua_source(lua_sources lua/uuid.lua uuid_lua)
 lua_source(lua_sources lua/crypto.lua crypto_lua)
 lua_source(lua_sources lua/error.lua error_lua)
