lib: introduce new digest submodule
Currently all hashing/encoding libraries are placed across the whole
project. And now we are going to add Base32 library and we don't know
where to put it. Let's move all hashing/encoding libraries to
`lib/digest` library.

Note that `xxhash` could be moved there as well, but it's quite a large
project and we don't use it internally at all - it's only exported to
Lua `digest` module. So let's leave it in `third_party`.

And, since are moving files here, let's rename `cpu_feature` files to
`crc32_hw_impl` because they are only used for crc32 hardware
implementation.

Also, it turned out that some third party libraries were not sanitized.
PMurHash is one of them, and after this commit this problem was revealed.
The commit adds UBSan suppression for `PMurHash32_Process`.

NO_TEST=refactoring
NO_CHANGELOG=refactoring
NO_DOC=refactoring

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -166,14 +166,6 @@ if(NOT TARGET_OS_OPENBSD)
     endif()
 endif()
 
-add_library(cpu_feature STATIC cpu_feature.c)
-
-add_library(crc32 STATIC
-    crc32.c
-    ${PROJECT_SOURCE_DIR}/third_party/crc32_impl.c
-)
-target_link_libraries(crc32 cpu_feature)
-
 add_library(shutdown STATIC on_shutdown.c)
 
 set (server_sources
@@ -289,8 +281,8 @@ endif()
 set_source_files_compile_flags(${server_sources})
 add_library(server STATIC ${server_sources})
 add_dependencies(server build_bundled_libs)
-target_link_libraries(server core coll http_parser bit uri swim swim_udp
-                      swim_ev crypto mpstream crc32 tzcode)
+target_link_libraries(server core coll digest http_parser bit uri swim swim_udp
+                      swim_ev crypto mpstream tzcode)
 target_include_directories(server PRIVATE ${EXTRA_SERVER_INCLUDE_DIRS})
 
 if(EMBED_LUAZLIB)
