--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(vclock)
 add_subdirectory(raft)
 add_subdirectory(fakesys)
 add_subdirectory(tzcode)
+add_subdirectory(digest)
 if(ENABLE_BUNDLED_MSGPUCK)
     add_subdirectory(msgpuck)
 endif()
