--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -42,6 +42,7 @@ lua_source(lua_sources lua/config/applier/sharding.lua     config_applier_shardi
 lua_source(lua_sources lua/config/applier/box_status.lua   config_applier_box_status_lua)
 lua_source(lua_sources lua/config/cluster_config.lua       config_cluster_config_lua)
 lua_source(lua_sources lua/config/configdata.lua           config_configdata_lua)
+lua_source(lua_sources lua/config/deprecations.lua         config_deprecations_lua)
 lua_source(lua_sources lua/config/descriptions.lua         config_descriptions_lua)
 lua_source(lua_sources lua/config/init.lua                 config_init_lua)
 lua_source(lua_sources lua/config/instance_config.lua      config_instance_config_lua)
