box: introduce array/table form of field compression
Examples:
- `compression = 'lz4'`
- `compression = {'lz4'}`
- `compression = {'lz4', acceleration = 1000}`
- `compression = {'zlib', level = 6, mem_level = 8}`

Closes #12117

NO_DOC=WIP
NO_TEST=WIP
NO_CHANGELOG=WIP

--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -138,6 +138,8 @@ set(tuple_sources
     field_map.c
     tuple_format.c
     tuple_format_map.c
+    field_compression_def.c
+    field_compression.c
     tuple_constraint_def.c
     tuple_constraint.c
     tuple_builder.c
