index: encapsulate virtual functions responsible for updates in memtx
Currently, the index methods virtual table has several functions that are
only used by the memtx indexes:
* `replace`;
* `begin_build`;
* `reserve`;
* `build_next`;
* `end_build`.

Let's introduce a separate `memtx_index_vtab` structure and encapsulate
these methods as a virtual table derived from `index_vtab`. This
encapsulation will further on allow us to augment the `replace` method with
additional context for supporting multikey indexes in memtx MVCC.

Closes #11722
Needed for #6385

NO_CHANGELOG=<refactoring>
NO_DOC=<refactoring>
NO_TEST=<refactoring>

--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -188,6 +188,7 @@ set(box_sources
     index_def.c
     index_weak_ref.c
     iterator_type.c
+    memtx_index.c
     memtx_hash.cc
     memtx_tree.cc
     memtx_rtree.cc
